--- a/admin_panel/popup_info.css
+++ b/admin_panel/popup_info.css
@@ -2,6 +2,7 @@
 .popup {
   display: none;
   position: fixed;
+  z-index: 10;
   left: 0;
   top: 0;
   width: 100%;
@@ -11,15 +12,34 @@
   align-items: center;
 }
 
+.popup h2 {
+  color: #7cdf55;
+  padding: 2px;
+  margin: 16px 5px 20px;
+  font-size: 26px;
+}
+
 /* Popup Content Box */
 .popup-content {
-  background: white;
+  background: rgb(29, 29, 29);
   padding: 20px;
   width: 400px;
   text-align: center;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+  transition: 0.3s ease-in-out;
+}
+.popup-content:hover {
+  box-shadow: 0 0 15px #09a001;
+}
+label {
+  margin-top: 10px;
+  color: rgb(212, 212, 212);
 }
 
 /* Close Button */
@@ -29,10 +49,13 @@
   right: 15px;
   font-size: 24px;
   cursor: pointer;
+  color: #056e1c;
+  transition: 0.3s ease-in-out;
 }
 
 .close-btn:hover {
   color: red;
+  transform: scale(1.5);
 }
 
 /* Form Input Fields */
@@ -41,20 +64,56 @@ textarea {
   width: 100%;
   margin: 10px 0;
   padding: 8px;
-  border: 1px solid #ccc;
+  border: 1px solid rgb(25, 68, 25);
+  background-color: #222;
+  color: white;
   border-radius: 5px;
+  transition: 0.3s;
+}
+
+input:focus {
+  outline: none;
+  border: 1px solid rgb(38, 195, 38);
+  box-shadow: 0 0 15px #38ec89;
+}
+
+input::placeholder {
+  color: green;
+}
+
+textarea::placeholder {
+  color: green;
+}
+textarea:focus {
+  border-radius: 40px;
+  outline: none;
+  border: 1px solid rgb(38, 195, 38);
+  box-shadow: 0 0 15px #38ec89;
 }
 
 /* Submit & No Button */
-.Submit {
-  padding: 10px 15px;
-  margin: 5px;
-  cursor: pointer;
+
+.submit {
+  padding: 10px;
+  background: #226f34;
+  color: white;
   border: none;
-  border-radius: 5px;
+  cursor: pointer;
+  border-radius: 35px;
+  margin: 10px;
+  font-size: 15px;
+  width: 11vh;
+}
+.submit:hover {
+  background: #218838;
 }
 
-.submit:hover {
-  background-color: #007bff;
+#closeFormBtn {
+  padding: 10px;
+  background: #28a745;
   color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  width: 30vh;
 }
