--- a/category.css
+++ b/category.css
@@ -22,7 +22,7 @@ h2 {
 }
 
 /* Category List */
-.category-container {
+.categories-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -31,41 +31,56 @@ h2 {
 
 /* Individual Category Box */
 .category-box {
-  background: rgb(46, 41, 41);
+  background: rgb(27, 25, 25);
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   width: 300px;
+  height: 15vh;
   text-align: center;
   transition: transform 0.3s ease-in-out;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .category-box:hover {
   transform: scale(1.05);
 }
 
-/* Category Image */
+/* Category Image
 .category-box img {
   width: 100%;
   height: 150px;
   object-fit: cover;
   border-radius: 8px;
-}
+} */
 
 /* Category Title */
-.category-title {
+.category-box a {
   font-size: 20px;
   font-weight: bold;
-  color: #222;
+  color: #23c428;
   margin: 10px 0;
+  text-decoration: none;
 }
 
+.category-box:hover a {
+  font-weight: bold;
+  color: #f2f2f2;
+}
+
+.category-box:hover .text-2xl {
+  transform: scale(1.5);
+}
 /* Category Description */
-.category-description {
+/* .category-description {
   font-size: 14px;
   color: #555;
   margin-bottom: 15px;
-}
+} */
 
 /* View More Button */
 .view-more-btn {
