--- a/css_mobile/mobile.css
+++ b/css_mobile/mobile.css
@@ -7,11 +7,17 @@
   right: 0;
   width: 100%;
   text-align: center;
+  gap: 0px;
   box-shadow: -2px 2px 10px rgba(0, 0, 0, 0.3);
 }
 
 .nav-links li {
-  padding: 15px;
+  padding: 8px;
+}
+
+.nav-links a {
+  font-size: 12px;
+  padding: 4px 11px;
 }
 
 /* Show Hamburger */
@@ -53,30 +59,61 @@
 }
 .but button {
   width: 14vh;
+  margin-top: -3px;
+  margin-right: 10px;
+  padding: 8px;
 }
 
 .but button a {
-  font-size: 12px;
+  font-size: 11px;
 }
 
 /* next gen bookmarking */
+
+#digiworld h2 {
+  width: 20vh;
+  font-size: 12px;
+  font-weight: 400;
+  padding: 9px;
+}
+
 #digiworld {
-  height: 120vh;
+  height: 50vh;
 }
 #digiworld h1 {
   font-size: 20px;
-  line-height: 40px;
+  line-height: 31px;
   margin-top: 19px;
   margin-bottom: 15px;
+  width: 35vh;
 }
 
-.info {
+#digiworld p {
+  font-size: 11px;
+  line-height: 20px;
+  margin-bottom: 8px;
+  max-width: 340px;
+}
+
+#digiworld .digi_support .digi_totle {
+  width: 15vh;
+  border-radius: 5px;
+  margin: 7px;
+  padding: 9px;
+  margin-bottom: 28px;
+}
+
+#digiworld .digi_support .digi_totle h3 {
+  margin: 5px;
+  font-size: 16px;
+}
+/* .info {
   background-color: #1d1c1cb8;
   padding: 10px;
   border-radius: 10px;
   height: 32vh;
   width: 100%;
-}
+} */
 
 /* web boxex */
 
@@ -85,4 +122,196 @@
   height: 26vh;
   margin: 5px;
   padding: 10px;
+}
+
+/* #scr
+ */
+#scr .pa {
+  width: 15vh;
+  font-size: 12px;
+  font-weight: 400;
+  padding: 8px;
+}
+
+.title {
+  font-size: 19px;
+}
+
+.description {
+  font-size: 13px;
+}
+
+.search-bar input {
+  width: 20vh;
+  padding: 10px;
+  font-size: 11px;
+}
+
+.search-bar button {
+  padding: 6px;
+  font-size: 15px;
+}
+
+.btn {
+  right: 38%;
+  bottom: -10px;
+  padding: 7px 16px;
+  font-size: 12px;
+  color: #aba6a6;
+  margin: 12px;
+}
+
+/* features 
+ */
+
+#featurs {
+  height: 70vh;
+  width: 100%;
+  margin-top: 5vh;
+}
+#featurs h1 {
+  font-size: 19px;
+  margin-top: 20px;
+  margin-bottom: -5px;
+}
+
+#featurs .item h1 {
+  font-size: 18px;
+  margin-top: 16px;
+  margin-bottom: 0px;
+}
+
+.ftr_itms .item {
+  width: 18vh;
+  height: 17vh;
+  margin: 6px;
+  padding: 15px;
+}
+.ftr_itms .item h3 {
+  font-size: 10px;
+  line-height: 14px;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+
+#featurs p {
+  margin-bottom: 0px;
+  padding: 10px;
+  font-size: 11px;
+  text-align: center;
+}
+.ftr_itms .item .fe_img {
+  font-size: 16px;
+  padding: 7px;
+}
+
+.ftr_itms .item a {
+  font-size: 11px;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.ftr_itms .item .trend {
+  right: 14px;
+  font-size: 10px;
+}
+
+#featurs .fe_btn {
+  margin-top: 2vh;
+}
+
+/* stay updated  */
+
+#Updated .Updated_sbrbe .Up_true {
+  padding: 1px 1px;
+}
+
+#Updated .Updated_sbrbe h1 {
+  font-size: 19px;
+  margin-bottom: 10px;
+}
+
+#Updated .Updated_sbrbe h2 {
+  font-size: 11px;
+  padding: 8px 11px;
+  font-weight: 400;
+  margin-top: 4px;
+  margin-bottom: 7px;
+}
+
+#Updated .Updated_sbrbe h3 {
+  font-size: 11px;
+  margin-bottom: 10px;
+}
+#Updated .Updated_sbrbe .search-bar {
+  padding: 5px;
+  margin-bottom: 6px;
+}
+#Updated .Updated_sbrbe .search-bar input {
+  padding: 5px 3px;
+}
+
+#Updated .Updated_sbrbe .search-bar button {
+  padding: 8px 10px;
+  font-size: 11px;
+}
+
+#Updated .Updated_sbrbe .Up_true p {
+  font-size: 11px;
+  margin: 10px 12px;
+}
+
+#Updated .Updated_sbrbe p {
+  margin: 5px;
+  font-size: 8px;
+}
+
+/* website and tools  */
+
+.display-container {
+  margin: 60px auto;
+}
+
+.display-container h2 {
+  font-size: 19px;
+  margin: 11px 9px;
+}
+
+.display-container p {
+  font-size: 10px;
+  font-weight: 400;
+  margin: 6px 3px;
+  color: rgb(143, 142, 142);
+  text-align: center;
+  width: 80%;
+}
+
+#website-list {
+  padding: 1px;
+  gap: 5px;
+}
+.website-box {
+  width: 20vh;
+  height: 18vh;
+  margin: 5px;
+  padding: 10px;
+}
+
+.website-box img {
+  width: 35px;
+  margin-bottom: 0px;
+  padding: 3px;
+}
+
+.website-box h3 {
+  font-size: 16px;
+  margin: 11px 0;
+}
+
+.website-box a {
+  color: #3baf40;
+  padding: 7px 4px;
+  border-radius: 5px;
+  font-size: 14px;
+  width: 15vh;
 }
