--- a/admin_panel/admin1.css
+++ b/admin_panel/admin1.css
@@ -15,9 +15,6 @@ body {
 .navbar {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  background: #1f1f1f;
-  padding: 15px 20px;
   color: white;
 }
 
@@ -29,16 +26,6 @@ body {
   text-decoration: none;
   font-weight: bold;
 }
-.logo a img {
-  height: 5vh;
-  margin: 3px 10px 3px 5px;
-  margin-bottom: 20px;
-  border: 2px solid #00ff41;
-  border-radius: 10px;
-  padding: 5px;
-  box-shadow: 0 0 10px rgba(0, 255, 65, 0.8);
-}
-
 .red {
   color: rgb(255, 0, 0);
 }
@@ -53,20 +40,43 @@ body {
 
 .nav-links li {
   display: inline;
+  position: relative;
 }
 
 .nav-links a {
-  color: white;
+  color: rgb(13, 183, 33);
   text-decoration: none;
-  font-size: 18px;
+  font-size: 15px;
   padding: 8px 12px;
   transition: 0.3s;
   border: 1px solid rgb(6, 30, 24);
 }
 
 .nav-links a:hover {
-  background: #2ab167;
+  background: #045227;
+  color: rgb(108, 255, 82);
   border-radius: 5px;
+}
+
+/* Dropdown Styling */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgb(21, 20, 20);
+  min-width: 150px;
+  box-shadow: 0px 4px 8px rgba(4, 138, 76, 0.2);
+  z-index: 10;
+}
+.dropdown-content a {
+  color: rgb(45, 175, 89);
+  padding: 10px;
+  display: block;
+}
+.dropdown-content a:hover {
+  background-color: #4ad355a4;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 /* Heading styles */
 
@@ -148,15 +158,15 @@ body {
 .home-container {
   display: flex;
   flex-direction: column;
-
   align-items: center;
   text-align: center;
-  margin: 50px auto;
+  margin-top: 75px;
+  /* height: 100vh; */
   width: 75%;
   padding: 40px;
-
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
+  justify-content: center;
 }
 
 .home-container h1 {
@@ -220,7 +230,7 @@ body {
 /* Search Results */
 .results-container {
   margin-top: 20px;
-  width: 90%;
+  width: 95%;
   margin-left: auto;
   margin-right: auto;
   text-align: left;
@@ -230,24 +240,30 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
+  margin-bottom: 20px;
 }
 
 .search-item {
   width: calc(35.25% - 20px);
-  background: white;
+  background: rgb(19, 19, 19);
+  width: 27vh;
+  position: relative;
   padding: 15px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  text-align: center;
+  /* text-align: center; */
   overflow: hidden;
 }
 
 .search-item img {
   max-width: 100%;
-  height: 10vh;
+  height: 6vh;
   border-radius: 5px;
 }
 
+.search-item h3 {
+  margin: 5px;
+}
 .search-item h3 a {
   text-decoration: none;
   color: #007bff;
@@ -266,27 +282,84 @@ body {
   color: #888;
 }
 
+.vis-top-right {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  color: #adff2fa8;
+}
+
+.links {
+  display: flex;
+  justify-content: center;
+  margin: 15px 1px;
+}
+.search-item .links-btn {
+  text-decoration: none;
+  color: #4fcf26c2;
+  padding: 5px 7px;
+  box-shadow: 0 0 10px green;
+  font-size: 16px;
+  border-radius: 5px;
+}
+.search-item .links-btn:hover {
+  background-color: #00ff00af;
+  color: white;
+  box-shadow: 0 0 10px rgb(95, 253, 95);
+}
 /* Responsive Design */
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
   .search-bar {
     width: 90%;
   }
   .search-item {
     width: 100%;
   }
-}
+} */
 .buttons {
   display: flex;
+  margin: 10px 0;
+  gap: 8px;
+  justify-content: center;
 }
+.buttons .edit-btn,
+.delete-btn,
+.visi-toggle-btn {
+  box-shadow: 0 0 4px yellow;
+  background: none;
+  padding: 5px 7px;
+  border: none;
+  border-radius: 5px;
+  color: #e8ef7c;
+}
+.buttons .edit-btn:hover,
+.visi-toggle-btn:hover {
+  box-shadow: 0 0 10px rgb(0, 255, 21);
+}
+.buttons .delete-btn {
+  box-shadow: 0 0 4px rgb(255, 0, 0);
+  padding: 5px 7px;
+}
+
+.buttons .delete-btn:hover {
+  box-shadow: 0 0 10px rgb(255, 0, 0);
+  padding: 5px 7px;
+}
+/* .buttons .visi-toggle-btn {
+  border-radius: 0 0 10px yellow;
+  padding: 5px 7px;
+} */
 #openFormBtn {
   display: flex;
   padding: 10px 23px;
   font-size: 15px;
   color: white;
-  background: #47ba4d;
+  background: #47ba4dd9;
+  box-shadow: 0 0 10px #3d8100;
   text-decoration: none;
   border-radius: 5px;
   margin: 10px;
+  border: none;
   transition: 0.3s;
 }
 
@@ -367,33 +440,41 @@ body {
   width: 35vh;
   padding: 15px;
   border-radius: 10px;
-  box-shadow: 0 0 8px rgba(19, 116, 2, 0.834);
+  box-shadow: 0 0 8px rgba(41, 41, 41, 0.834);
   transition: 0.3sease-in-out;
   text-align: center;
   overflow: hidden;
   background-color: #0f0d0deb;
+  transition: 0.3s ease-in-out;
 }
 
 .website-box:hover {
-  box-shadow: 0 0 12px rgba(185, 252, 196, 0.943);
+  box-shadow: 0 0 17px rgba(41, 242, 5, 0.834);
 }
 
 .website-box img {
   height: 8vh;
   padding: 5px;
-  box-shadow: 0px 0px 22px gray;
+  border-radius: 50px;
+  box-shadow: 0px 0px 14px rgb(0, 86, 7);
+  transition: 0.3s ease-in-out;
+}
+
+.website-box:hover img {
+  box-shadow: 0px 0px 22px rgb(31, 192, 10);
 }
 
 .website-box h3 {
   font-size: 27px;
   padding: 7px;
-  margin-top: 7px;
+  margin: 7px 0px;
   color: #48c320;
 }
 
 .website-box p {
   color: #898b8e;
   margin: 5px;
+  font-size: 12px;
 }
 
 .website-box strong {
@@ -410,8 +491,9 @@ body {
   font-size: small;
 }
 .website-box a {
-  background-color: rgb(9, 145, 4);
-  color: white;
+  background-color: rgb(0 10 0);
+  box-shadow: 0 0 7px green;
+  color: #08c338;
   padding: 8px 10px;
   border: none;
   border-radius: 5px;
@@ -425,7 +507,8 @@ body {
 }
 
 .website-box a:hover {
-  background-color: rgb(22, 114, 4);
+  background-color: rgb(11, 55, 3);
+  box-shadow: 0 0 15px rgb(4, 255, 4);
 }
 
 .website-box .edit-btn {
@@ -445,15 +528,35 @@ body {
   cursor: pointer;
   box-shadow: none;
 }
+.website-box .btn2 {
+  transform: translate(0, 200px);
+  transition: 0.3s ease-in;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 2px;
+}
+.website-box:hover .btn2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 20px;
+  transform: translate(0, 0);
+}
 .website-box .delete-btn {
-  background-color: rgb(188, 15, 15);
-  color: white;
+  /* background-color: rgb(188, 15, 15); */
+  background-color: transparent;
+  box-shadow: 0 0 10px red;
+  color: rgb(245, 186, 186);
   padding: 8px 10px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   display: block;
-  width: 20vh;
+  width: 60%;
+  transition: 0.3s ease-in-out;
   text-align: center;
 }
 
@@ -468,15 +571,15 @@ body {
   top: 10px;
 }
 button.toggle-btn {
+  display: block;
+  transition: 0.3s ease;
   background-color: rgba(6, 44, 148, 0.753);
   color: white;
   padding: 8px 10px;
-  margin-top: 5px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  display: block;
-  width: 20vh;
+  width: 60%;
   text-align: center;
 }
 
@@ -579,9 +682,9 @@ button.toggle-btn {
     padding: 0;
   }
 
-  .home-container {
+  /* .home-container {
     width: 50%;
-  }
+  } */
 
   /* Center the container */
   .container {
