--- a/css_mobile/mobile.css
+++ b/css_mobile/mobile.css
@@ -124,6 +124,30 @@
   padding: 10px;
 }
 
+/* user search bar  */
+
+.search-item h3 a {
+  font-size: 16px;
+  padding: 4px 1px 6px;
+}
+.search-item .category {
+  font-size: 11px;
+  color: rgb(147 138 138);
+}
+.search-item {
+  background: #100f0f;
+  box-shadow: 0 0 5px #4a6942;
+  width: 20vh;
+  height: 30vh;
+}
+.search-item .s-link-btn {
+  margin-top: 13px;
+
+  width: 15vh;
+
+  font-size: 12px;
+}
+
 /* #scr
  */
 #scr .pa {
@@ -154,7 +178,7 @@
 
 .btn {
   right: 38%;
-  bottom: -10px;
+  bottom: -40px;
   padding: 7px 16px;
   font-size: 12px;
   color: #aba6a6;
