--- a/subadmin_panel/dashboard.css
+++ b/subadmin_panel/dashboard.css
@@ -1,70 +1,364 @@
-body {
-  font-family: Arial, sans-serif;
+* {
   margin: 0;
   padding: 0;
 }
-.navbar {
-  background-color: #0e0f0e;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    right: 50vh;
-    z-index: 7;
-    left: 50vh;
-    padding: 5px 50px;
-    top: 25px;
-    border-radius: 40px;
-    box-shadow: 0 0 10px #00800099;
-}
-.logo img {
-  width: 50px;
-}
-.navbar h2 {
-  color: white;
+body {
+  font-family: "JetBrains Mono", monospace, Inter, system-ui, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  background-color: #0c0f13;
   margin: 0;
+  padding: 0;
+  height: 100vh;
+
+  font-weight: 400;
+  background-color: #000000;
+  scroll-behavior: smooth;
 }
-.navbar .red {
-  color: red;
-}
-.nav-links {
-  list-style-type: none;
+
+.navbar {
   display: flex;
+  justify-content: space-between;
+  color: white;
+}
+
+.logo a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(209, 209, 209);
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.logo a img {
+  height: 5vh;
+  border: 2px solid #00ff41;
+  border-radius: 36px;
+  padding: 11px;
+  box-shadow: 0 0 10px rgba(0, 255, 65, 0.8);
+}
+.red {
+  color: rgb(255, 0, 0);
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   gap: 20px;
 }
+
 .nav-links li {
   display: inline;
+  position: relative;
 }
+
 .nav-links a {
-  color: #4caf50;
+  color: rgb(13, 183, 33);
   text-decoration: none;
-  font-weight: bold;
+  font-size: 15px;
+  padding: 8px 12px;
+  transition: 0.3s;
+  border: 1px solid rgb(6, 30, 24);
 }
+
+.nav-links a:hover {
+  background: #045227;
+  color: rgb(108, 255, 82);
+  border-radius: 5px;
+}
+
+/* .dashboard-container {
+} */
 .dashboard-container {
-  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+.dashboard-container .wlcm {
+  font-size: 34px;
+  color: #dedede;
+  margin-top: 10vh;
+  margin-bottom: 16px;
+}
+
+.dashboard-container h4 {
+  font-size: 20px;
+  color: #7e7c7c;
+  margin-bottom: 30px;
+}
+
+/* Box container */
+.website-boxes-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+/* Home Page Styles */
 .home-container {
-  padding: 20px;
-  background-color: #f4f4f4;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-top: 75px;
+  /* height: 100vh; */
+  width: 75%;
+  padding: 40px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  justify-content: center;
+}
+
+.home-container h1 {
+  font-size: 2.5rem;
+  margin-bottom: 15px;
+}
+
+.home-container p {
+  font-size: 1.2rem;
+  color: #666;
+  margin-bottom: 2rem;
+}
+
+/* Search Bar */
+.search-bar {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  text-align: center;
+  gap: 10px;
+  margin-top: 10px;
+  /* margin-bottom: 5vh; */
+  padding: 2vh;
+  align-items: center;
+}
+
+.search-bar input {
+  width: 40vh;
+  padding: 13px;
+  font-size: 16px;
+  border-radius: 6px;
+  border: 1px solid rgb(43, 113, 43);
+  background-color: #222;
+  color: white;
+  transition: 0.3s;
+}
+
+.search-bar input:focus {
+  outline: none;
+  border-color: #00ff00;
+  box-shadow: 0 0 5px #38ec89;
+}
+
+.search-bar .srch {
+  padding: 0px 10px 0px 10px;
+  font-size: 16px;
+  background: rgb(30, 213, 118);
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: 0.3s;
+  height: 46px;
+}
+
+.search-bar .srch:hover {
+  background: #00cc00;
+}
+
+/* Search Results */
+
+/* Search Results */
+.results-container {
+  margin-top: 20px;
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+}
+
+.search-results {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.search-item {
+  width: calc(35.25% - 20px);
+  background: rgb(19, 19, 19);
+  width: 27vh;
+  position: relative;
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  /* text-align: center; */
+  overflow: hidden;
+}
+
+.search-item img {
+  max-width: 100%;
+  height: 6vh;
   border-radius: 5px;
 }
-.home-container h3 {
-  color: #333;
+
+.search-item h3 {
+  margin: 5px;
 }
-.search-bar input {
-  padding: 10px;
-  width: 60%;
+.search-item h3 a {
+  text-decoration: none;
+  color: #007bff;
+  font-size: 18px;
 }
-.buttons a {
-  padding: 10px 20px;
-  background-color: #4caf50;
+
+.search-item p {
+  font-size: 14px;
+  color: #666;
+}
+
+.category {
+  display: block;
+  margin-top: 5px;
+  font-size: 14px;
+  color: #888;
+}
+
+.vis-top-right {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  color: #adff2fa8;
+}
+
+.links {
+  display: flex;
+  justify-content: center;
+  margin: 15px 1px;
+}
+.search-item .links-btn {
+  text-decoration: none;
+  color: #4fcf26c2;
+  padding: 5px 7px;
+  box-shadow: 0 0 10px green;
+  font-size: 16px;
+  border-radius: 5px;
+}
+.search-item .links-btn:hover {
+  background-color: #00ff00af;
   color: white;
+  box-shadow: 0 0 10px rgb(95, 253, 95);
+}
+/* Responsive Design */
+/* @media screen and (max-width: 768px) {
+  .search-bar {
+    width: 90%;
+  }
+  .search-item {
+    width: 100%;
+  }
+} */
+.buttons {
+  display: flex;
+  margin: 10px 0;
+  gap: 8px;
+  justify-content: center;
+}
+.buttons .edit-btn,
+.delete-btn,
+.visi-toggle-btn {
+  box-shadow: 0 0 4px yellow;
+  background: none;
+  padding: 5px 7px;
+  border: none;
+  border-radius: 5px;
+  color: #e8ef7c;
+}
+.buttons .edit-btn:hover,
+.visi-toggle-btn:hover {
+  box-shadow: 0 0 10px rgb(0, 255, 21);
+}
+.buttons .delete-btn {
+  box-shadow: 0 0 4px rgb(255, 0, 0);
+  padding: 5px 7px;
+}
+
+.buttons .delete-btn:hover {
+  box-shadow: 0 0 10px rgb(255, 0, 0);
+  padding: 5px 7px;
+}
+/* .buttons .visi-toggle-btn {
+  border-radius: 0 0 10px yellow;
+  padding: 5px 7px;
+} */
+#openFormBtn {
+  display: flex;
+  padding: 10px 23px;
+  font-size: 15px;
+  color: white;
+  background: #47ba4dd9;
+  box-shadow: 0 0 10px #3d8100;
   text-decoration: none;
   border-radius: 5px;
-  font-weight: bold;
-  margin-top: 20px;
-  display: inline-block;
+  margin: 10px;
+  border: none;
+  transition: 0.3s;
 }
+
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 15px;
+  color: white;
+  background: #17750447;
+  text-decoration: none;
+  border-radius: 3px;
+  margin: 11px;
+  transition: 0.3s;
+  box-shadow: 0 0 8px rgb(15 145 12 / 79%);
+}
+
+.btn:hover {
+  background: #195d15;
+}
+
+.container {
+  width: 70%;
+  margin: 20px auto;
+  background: white;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+}
+.container h2 {
+  text-align: center;
+}
+
+.view-submissions,
+.back-button {
+  display: inline-block;
+  justify-content: center;
+  text-align: center;
+  background: #28a745;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 5px;
+  text-decoration: none;
+  margin: 10px 0;
+  font-size: 15px;
+  width: 30vh;
+}
+
+.view-submissions:hover,
+.back-button:hover {
+  background: #218838;
+}
+
+/* Popup Form Hidden by Default */
+
 .popup {
   display: none;
   position: fixed;
@@ -75,17 +369,73 @@ body {
   background-color: rgba(0, 0, 0, 0.7);
   justify-content: center;
   align-items: center;
+  z-index: 10;
+}
+.popup h2 {
+  color: #7cdf55;
+  padding: 2px;
+  margin: 16px 5px 20px;
+  font-size: 26px;
 }
 .popup-content {
-  background-color: white;
-  padding: 30px;
+  background: rgb(29, 29, 29);
+  padding: 20px;
   border-radius: 10px;
   width: 50%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+  transition: 0.3s ease-in-out;
 }
+.popup-content:hover {
+  box-shadow: 0 0 15px #09a001;
+}
+label {
+  color: rgb(212, 212, 212);
+}
+
 .popup .close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 24px;
   cursor: pointer;
-  font-size: 30px;
+  color: #056e1c;
+  transition: 0.3s ease-in-out;
 }
+.close-btn:hover {
+  color: red;
+  transform: scale(1.5);
+}
+/* Form Input Fields */
+.popup-content input,
+textarea {
+  width: 90%;
+  margin: 10px 0;
+  padding: 8px;
+  border: 1px solid rgb(25, 68, 25);
+  background-color: #222;
+  color: white;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+.redio-btns {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#sub-clos {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
 .submit,
 #closeFormBtn {
   padding: 10px 20px;
@@ -112,47 +462,47 @@ body {
 
 .goll {
   box-shadow: 0 0 29px #3cff008c;
-    width: 60vh;
-    background: linear-gradient(45deg, black, #00800061, black);
-    height: 60vh;
-    border-radius: 50%;
-    position: absolute;
-    left: -104px;
-    top: -93px;
+  width: 60vh;
+  background: linear-gradient(45deg, black, #00800061, black);
+  height: 60vh;
+  border-radius: 50%;
+  position: absolute;
+  left: -104px;
+  top: -93px;
 }
 .goll2 {
   box-shadow: 0 0 29px #3cff008c;
-    width: 60vh;
-    background: linear-gradient(45deg, black, #00800061, black);
-    height: 60vh;
-    border-radius: 50%;
-    position: absolute;
-    right: -56px;
-    bottom: -172px;
-    overflow: hidden;
+  width: 60vh;
+  background: linear-gradient(45deg, black, #00800061, black);
+  height: 60vh;
+  border-radius: 50%;
+  position: absolute;
+  right: -56px;
+  bottom: -172px;
+  overflow: hidden;
 }
 
 .sub-log-itmes {
   display: flex;
-  display: flex
-  ;
-      background: rgba(0, 0, 0, 0.8);
-      padding: 20px;
-      border: 2px solid #00ff00;
-      box-shadow: 0px 0px 15px #00ff00;
-      width: 70%;
-      margin-top: 10vh;
-      height: 65vh;
-      align-items: center;
-      z-index: 7;
+  background: rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  border: 2px solid #00ff00;
+  box-shadow: 0px 0px 15px #00ff00;
+  width: 70%;
+  margin-top: 10vh;
+  height: 65vh;
+  align-items: center;
+  z-index: 7;
 }
 
-.sub-log-left, .sub-log-right {
+.sub-log-left,
+.sub-log-right {
   flex: 1;
   padding: 20px;
 }
 
-h1, h2 {
+h1,
+h2 {
   color: #00ff00;
   text-shadow: 0 0 5px #00ff00;
 }
@@ -193,12 +543,191 @@ button:hover {
 }
 
 @keyframes hacker-text {
-  0% { opacity: 0; }
-  50% { opacity: 1; }
-  100% { opacity: 0; }
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 h2::after {
-  content: '|';
+  content: "|";
   animation: hacker-text 1s infinite;
+}
+
+/* homepage vrchya websites  */
+
+.display-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+#website-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.website-box {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 35vh;
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 0 0 8px rgba(41, 41, 41, 0.834);
+  transition: 0.3sease-in-out;
+  text-align: center;
+  overflow: hidden;
+  background-color: #0f0d0deb;
+  transition: 0.3s ease-in-out;
+}
+
+.website-box:hover {
+  box-shadow: 0 0 17px rgba(41, 242, 5, 0.834);
+}
+
+.website-box img {
+  height: 8vh;
+  padding: 5px;
+  border-radius: 50px;
+  box-shadow: 0px 0px 14px rgb(0, 86, 7);
+  transition: 0.3s ease-in-out;
+}
+
+.website-box:hover img {
+  box-shadow: 0px 0px 22px rgb(31, 192, 10);
+}
+
+.website-box h3 {
+  font-size: 27px;
+  padding: 7px;
+  margin: 7px 0px;
+  color: #48c320;
+}
+
+.website-box p {
+  color: #898b8e;
+  margin: 5px;
+  font-size: 12px;
+}
+
+.website-box strong {
+  color: #3bbb57;
+  margin: 5px;
+}
+
+.website-box .ids {
+  display: flex;
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  color: rgb(145, 144, 144);
+  font-size: small;
+}
+.website-box a {
+  background-color: rgb(0 10 0);
+  box-shadow: 0 0 7px green;
+  color: #08c338;
+  padding: 8px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: block;
+  width: 20vh;
+  text-align: center;
+  text-decoration: none;
+}
+
+.website-box a:hover {
+  background-color: rgb(11, 55, 3);
+  box-shadow: 0 0 15px rgb(4, 255, 4);
+}
+
+.website-box .edit-btn {
+  background-color: transparent;
+  display: inline-flex;
+  box-shadow: none;
+  padding: none;
+  border: none;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+.website-box .edit-btn img {
+  background-color: transparent;
+  color: none;
+  height: 34px;
+  cursor: pointer;
+  box-shadow: none;
+}
+.website-box .btn2 {
+  transform: translate(0, 200px);
+  transition: 0.3s ease-in;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 2px;
+}
+.website-box:hover .btn2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 20px;
+  transform: translate(0, 0);
+}
+.website-box .delete-btn {
+  /* background-color: rgb(188, 15, 15); */
+  background-color: transparent;
+  box-shadow: 0 0 10px red;
+  color: rgb(245, 186, 186);
+  padding: 8px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  display: block;
+  width: 60%;
+  transition: 0.3s ease-in-out;
+  text-align: center;
+}
+
+.website-box .delete-btn:hover {
+  background-color: darkred;
+}
+
+.website-box .visib {
+  color: #007bff;
+  position: absolute;
+  left: 10px;
+  top: 10px;
+}
+button.toggle-btn {
+  display: block;
+  transition: 0.3s ease;
+  background-color: rgba(6, 44, 148, 0.753);
+  color: white;
+  padding: 8px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 60%;
+  text-align: center;
+}
+
+.no-websites {
+  text-align: center;
+  font-size: 18px;
+  color: #777;
 }
